# Violet-Model-Merge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.md.backup  README_corrupted.md  Utils.py  lora_bake.py  merge.py  merge_runner.ipynb  metadata_manager.ipynb  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  todo.md  violet_merge.ipynb  violet_merge.py
.github/workflows/: test.yml
lib/: Utils.py  lora_bake.py  merge.py  merge_model.py  merge_vae.py  metadata_csv.py  utils.py
lib/presets/: README.md
reference/: elemental_random.md  guide.md
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_merge_model.py  test_smoke.py  test_utils.py  test_vae.py
